--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,7 +8,9 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: 
+      - ubuntu-latest
+      - macos-latest
     permissions: write-all
     steps:
       - uses: actions/checkout@v3
